--- a/metadata.yaml
+++ b/metadata.yaml
@@ -20,5 +20,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Sixty Folk-Tales from Exclusively Slavonic Sources
 url: http://www.gutenberg.org/ebooks/48761
